# jpm

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  test_process_advanced.js  test_process_complete.js
src/: downloader.rs  installer.rs  jpm_config.h  main.cpp  main.rs  npm.rs  npm_installer.rs  package.rs  resolver.rs  util.rs
src/commands/: install.cpp  js_command.cpp  js_command.h
src/install/: install.cpp  install.h
src/js/: js.cpp  module.cpp  module.h
src/js/process/: argv.cpp  argv.h  env.cpp  env.h  events.cpp  events.h  exit.cpp  exit.h  platform.cpp  platform.h  stderr.cpp  stderr.h  stdin.cpp  stdin.h  stdout.cpp  stdout.h
src/network/: http_client.cpp  http_client.h
src/package/: dependency_resolver.cpp  dependency_resolver.h  package_info.h  package_spec.h  tarball_handler.cpp  tarball_handler.h
src/parsing/: json_parser.cpp  json_parser.h
src/utils/: file_utils.cpp  file_utils.h  ui_utils.cpp  ui_utils.h
