[package]
name = "jpm"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A faster and more reliable package manager alternative to npm"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.8"
semver = "1.0"
spinners = "4.1.1"
thiserror = "1.0"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
futures-util = "0.3"
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
colored = "2.0"
atty = "0.2.14"
